--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -338,6 +338,13 @@ template {
   display: none;
 }
 
+/* $gSideBar: linear-gradient(
+  90deg,
+  $cOutsideBg 0%,
+  $cSidebarBg 15%,
+  $cSidebarBg 90%,
+  $cMainBg 99%
+); */
 * {
   box-sizing: border-box;
 }
@@ -356,13 +363,6 @@ html body img.image {
   max-width: 100%;
 }
 
-/* $gSideBar: linear-gradient(
-  90deg,
-  $cOutsideBg 0%,
-  $cSidebarBg 15%,
-  $cSidebarBg 90%,
-  $cMainBg 99%
-); */
 body {
   display: flex;
   flex-direction: row;
@@ -402,12 +402,11 @@ body .bodyContainer {
   height: 100vh;
   bottom: 0;
   position: fixed;
-  padding: 1vw;
 }
 .bodyContainer > .sidebarContainer .sidebar header {
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -416,7 +415,7 @@ body .bodyContainer {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  margin-top: 15vh;
+  margin-top: 4vh;
   max-width: 100%;
   height: 100px;
   width: 160px;
@@ -442,7 +441,8 @@ body .bodyContainer {
 
 nav {
   /* max-width: 100%; */
-  padding: 1rem;
+  padding: 1vh 1rem;
+  padding: 0 1rem;
 }
 nav ul {
   padding: 0;
@@ -450,8 +450,8 @@ nav ul {
 }
 nav li button {
   border: 2px solid black;
-  margin: 1rem;
-  padding: 0.5rem 0rem;
+  margin: 2vh 1rem;
+  padding: 1vh 0rem;
   width: 7rem;
   border-radius: 10px;
   background-image: linear-gradient(90deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
@@ -477,6 +477,7 @@ footer div {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 3vh;
   font-size: 0.8rem;
   border-radius: 8px;
   border: 2px solid hsl(284deg, 38%, 11%);
@@ -484,31 +485,6 @@ footer div {
   width: 14em;
   color: #eef4a1;
   background-color: hsl(283deg, 34%, 40%);
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 1200px;
-  width: 88vw;
-  padding: 1vw;
-  min-height: 100vh;
-  background-color: hsl(184deg, 6%, 81%);
-}
-main div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 65%;
-  margin-bottom: 3rem;
-  background-color: hsl(55deg, 100%, 95%);
-  border-radius: 15px;
-  border: 2px solid black;
-  padding: 2%;
-  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
 }
 
 /*# sourceMappingURL=common.css.map */
