--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -1,3 +1,11 @@
+/* $gSideBar: linear-gradient(
+  90deg,
+  $cOutsideBg 0%,
+  $cSidebarBg 15%,
+  $cSidebarBg 90%,
+  $cMainBg 99%
+); */
+@import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -5,7 +13,6 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
 html {
   line-height: 1.15;
@@ -346,6 +353,76 @@ template {
   $cSidebarBg 90%,
   $cMainBg 99%
 ); */
+@media only screen and (max-width: 768px) {
+  html .bodyContainer .sidebarContainer {
+    min-width: 0;
+    width: 0;
+    height: 0;
+  }
+  html .bodyContainer .sidebarContainer .sidebar {
+    background-image: linear-gradient(0deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
+    width: 100vw;
+    height: 10vh;
+    top: 0;
+    bottom: unset;
+    left: 0;
+  }
+  html .bodyContainer .sidebarContainer .sidebar header.mediaQuery {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: 10vh;
+  }
+  html .bodyContainer .sidebarContainer .sidebar header.mediaQuery .logo {
+    margin: 0;
+    height: 30px;
+    width: 48px;
+    border-radius: 10px;
+  }
+  html .bodyContainer .sidebarContainer .sidebar header.mediaQuery .logo .logoLink {
+    font-size: 0.9rem;
+  }
+  html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: calc(0.1rem + 1.878vw);
+  }
+  html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul li button {
+    width: 6rem;
+    margin: 1vh calc(0.3rem + 0.001vw);
+    font-size: calc(0.9rem + 0.21vw);
+  }
+  html .bodyContainer .sidebarContainer .sidebar footer.mediaQuery .shadow1 {
+    position: fixed;
+    left: -1vw;
+    bottom: -3.4vh;
+    border-radius: 0;
+    width: 110vw;
+    height: 3.8vh;
+    box-shadow: 10px -10px 10px hsla(0deg, 0%, 0%, 0.5);
+  }
+}
+@media only screen and (max-width: 480px) {
+  html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar {
+    height: 2rem;
+  }
+  html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .btn-menu {
+    display: flex;
+  }
+  html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .logo,
+html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header nav {
+    display: none;
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -367,7 +444,7 @@ html body img.image {
 body {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -378,7 +455,8 @@ body {
 body .bodyContainer {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: center;
   width: 100vw;
 }
 
@@ -387,9 +465,8 @@ body .bodyContainer {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 25vw;
-  /* width: 10%; */
-  z-index: 2;
+  min-width: 14rem;
+  width: 18vw;
 }
 .bodyContainer > .sidebarContainer .sidebar {
   display: flex;
@@ -400,7 +477,8 @@ body .bodyContainer {
   background-image: linear-gradient(90deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
   box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
   position: fixed;
-  width: 25vw;
+  min-width: 14rem;
+  width: 18vw;
   height: 100vh;
   bottom: 0;
 }
@@ -411,6 +489,10 @@ body .bodyContainer {
   align-items: center;
 }
 
+.btn-menu {
+  display: none;
+}
+
 .logo {
   display: flex;
   flex-flow: column nowrap;
@@ -418,11 +500,11 @@ body .bodyContainer {
   align-items: center;
   margin-top: 4vh;
   max-width: 100%;
-  height: 100px;
-  width: 160px;
+  height: 70px;
+  width: 112px;
   padding: 0 4px;
   background-color: hsl(283deg, 34%, 40%);
-  border-radius: 30px;
+  border-radius: 21px;
   border: 2px solid hsl(284deg, 38%, 11%);
   /* background-image: $gLogoText;
   background-size: 100%; */
@@ -430,7 +512,7 @@ body .bodyContainer {
 
 .logoLink {
   font-family: "Oleo Script Swash Caps", cursive;
-  font-size: 1.8rem;
+  font-size: 2.3rem;
   text-decoration: none;
   background-image: linear-gradient(-225deg, #c47d0c 0%, #eef4a1 38%, #dfbb45 50%, #eef4a1 68%, #c47d0c 100%);
   background-size: 95%;
@@ -456,7 +538,7 @@ nav ul {
 nav li button {
   border: 2px solid black;
   margin: 2vh 1rem;
-  padding: 1vh 0rem;
+  padding: 1vh 0;
   width: 7rem;
   border-radius: 10px;
   background-image: linear-gradient(90deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
@@ -490,71 +572,6 @@ footer div {
   width: 14em;
   color: #eef4a1;
   background-color: hsl(283deg, 34%, 40%);
-}
-
-/* $gSideBar: linear-gradient(
-  90deg,
-  $cOutsideBg 0%,
-  $cSidebarBg 15%,
-  $cSidebarBg 90%,
-  $cMainBg 99%
-); */
-@media only screen and (max-width: 768px) {
-  html .bodyContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  html .bodyContainer .sidebarContainer {
-    width: 100vw;
-    height: 18vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  html .bodyContainer .sidebarContainer .sidebar {
-    background-image: linear-gradient(0deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
-    width: 100vw;
-    height: 18vh;
-    top: 0;
-    bottom: unset;
-    left: 0;
-  }
-  html .bodyContainer .sidebarContainer .sidebar header {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  html .bodyContainer .sidebarContainer .sidebar header .logo {
-    margin: 0;
-    height: 70px;
-    width: 112px;
-    border-radius: 21px;
-  }
-  html .bodyContainer .sidebarContainer .sidebar header .logo .logoLink {
-    font-size: 1.26rem;
-  }
-  html .bodyContainer .sidebarContainer .sidebar header nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  html .bodyContainer .sidebarContainer .sidebar header nav ul {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid red;
-  }
-  html .bodyContainer .sidebarContainer .sidebar footer {
-    position: fixed;
-    bottom: 0;
-    margin-bottom: 0.1vh;
-  }
 }
 
 /*# sourceMappingURL=common.css.map */
