--- a/styles/sass/common.scss
+++ b/styles/sass/common.scss
@@ -1,3 +1,132 @@
+@use './tools' as tools;
 @import './normalize';
-@import './global';
 @import './_common-mq';
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
+}
+
+picture {
+  display: block;
+}
+
+html body img.image {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+body {
+  @include tools.flexing(row, none, flex-start, center);
+  //min-height: 100vh;
+}
+
+.shadow1 {
+  @include tools.giveShadow(1);
+}
+
+body .bodyContainer {
+  @include tools.flexing(row, none, flex-start, center);
+  width: 100vw;
+}
+
+.bodyContainer > .sidebarContainer {
+  @include tools.flexing(column, none, flex-start, center);
+  min-width: 14rem;
+  width: 18vw;
+
+  & .sidebar {
+    @include tools.flexing(column, none, space-between, center);
+    background-color: tools.$cSidebarBg;
+    background-image: tools.$gSideBar;
+    @include tools.giveShadow(1);
+    position: fixed;
+    min-width: 14rem;
+    width: 18vw;
+    height: 100vh;
+    bottom: 0;
+
+    & header {
+      @include tools.flexing(column, nowrap, space-between, center);
+    }
+  }
+}
+.btn-menu {
+  display: none;
+}
+.logo {
+  @include tools.flexing(column, nowrap, center, center);
+  margin-top: 4vh;
+  max-width: 100%;
+  //height: 100px;
+  //width: 160px;
+  height: 70px;
+  width: 112px;
+  padding: 0 4px;
+  background-color: tools.$cLogo;
+  //border-radius: 30px;
+  border-radius: 21px;
+  border: 2px solid tools.$cBorderLogo;
+  /* background-image: $gLogoText;
+  background-size: 100%; */
+}
+.logoLink {
+  font-family: 'Oleo Script Swash Caps', cursive;
+  font-size: 2.3rem;
+  text-decoration: none;
+  background-image: tools.$gLogoText;
+  background-size: 95%;
+  background-clip: text;
+  color: transparent;
+  text-align: center;
+  font-weight: 900;
+}
+nav {
+  /* max-width: 100%; */
+  padding: 1vh 1rem;
+  padding: 0 1rem;
+  & ul {
+    @include tools.flexing(column, nowrap, center, center);
+    padding: 0;
+    list-style: none;
+  }
+  & li button {
+    border: 2px solid black;
+    margin: 2vh 1rem;
+    padding: 1vh 0;
+    width: 7rem;
+    border-radius: 10px;
+    background-image: tools.$gSideBar;
+    text-align: center;
+    &:hover {
+      @include tools.giveShadow(1);
+      position: relative;
+      bottom: 5px;
+      right: 5px;
+      transition: bottom, right, 0.2s ease;
+    }
+    &:active {
+      top: 0px;
+      left: 0px;
+      transition: bottom, right, 0.1s ease;
+      @include tools.giveShadow(0);
+      @include tools.giveShadow(2);
+    }
+  }
+}
+
+footer div {
+  @include tools.flexing(column, none, center, center);
+  margin-bottom: 3vh;
+  font-size: 0.8rem;
+  border-radius: 8px;
+  border: 2px solid tools.$cBorderLogo;
+  height: 2rem;
+  width: 14em;
+  color: tools.$footerFont;
+  background-color: tools.$cLogo;
+}
