--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -356,11 +356,13 @@ template {
 @media only screen and (max-width: 768px) {
   html .bodyContainer .sidebarContainer {
     min-width: 0;
+    max-width: unset;
     width: 0;
     height: 0;
   }
   html .bodyContainer .sidebarContainer .sidebar {
     background-image: linear-gradient(0deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
+    max-width: unset;
     width: 100vw;
     height: 10vh;
     top: 0;
@@ -413,16 +415,75 @@ template {
 }
 @media only screen and (max-width: 480px) {
   html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar {
-    height: 2rem;
+    height: 3.5rem;
+    min-width: 0;
+    width: 3.3rem;
+    border: 2px solid black;
+    border-radius: 0 0 20px 0;
+    padding: 2vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
   }
   html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .btn-menu {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: #dfbb45;
+    background-color: hsl(283deg, 34%, 40%);
+    font-size: 1.4rem;
+    border-radius: 5px;
+    border: 1px solid hsl(284deg, 38%, 11%);
+  }
+  html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .btn-menu:active {
+    color: #eef4a1;
   }
   html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .logo,
 html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header nav {
     display: none;
   }
 }
+/* @media only screen and (max-width: 480px) {
+  html body div.bodyContainer.mediaQueryMb {
+    & .sidebarContainer {
+      & .sidebar {
+        //[]
+        height: 3.5rem;
+        min-width: 0;
+        //[]
+        width: 100vw;
+        border: 2px solid black;
+        border-radius: 0 0 20px 0;
+        padding: 2vw;
+        @include tools.flexing(row, none, flex-start, center);
+        & header {
+          & .btn-menu {
+            @include tools.flexing(row, none, center, center);
+            color: tools.$cLogoText3;
+            background-color: tools.$cLogo;
+            font-size: 1.4rem;
+            border-radius: 5px;
+            border: 1px solid tools.$cBorderLogo;
+            &:active {
+              color: tools.$cLogoText2;
+            }
+          }
+          & .logo {
+            //[]
+            display: none;
+          }
+          & nav {
+            //[]
+            //@include tools.flexing(row, wrap, flex-start, center);
+          }
+        }
+      }
+    }
+  }
+}
+ */
 * {
   box-sizing: border-box;
 }
@@ -467,6 +528,7 @@ body .bodyContainer {
   align-items: center;
   min-width: 14rem;
   width: 18vw;
+  max-width: 12rem;
 }
 .bodyContainer > .sidebarContainer .sidebar {
   display: flex;
@@ -478,6 +540,7 @@ body .bodyContainer {
   box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
   position: fixed;
   min-width: 14rem;
+  max-width: 12rem;
   width: 18vw;
   height: 100vh;
   bottom: 0;
@@ -490,7 +553,9 @@ body .bodyContainer {
 }
 
 .btn-menu {
+  font-family: Arial, Helvetica, sans-serif;
   display: none;
+  font-weight: 600;
 }
 
 .logo {
@@ -523,7 +588,6 @@ body .bodyContainer {
 }
 
 nav {
-  /* max-width: 100%; */
   padding: 1vh 1rem;
   padding: 0 1rem;
 }
