--- a/styles/sass/home.scss
+++ b/styles/sass/home.scss
@@ -4,8 +4,8 @@
 main {
   //border: 3px solid red;
   @include tools.flexing(column, none, flex-start, center);
-  max-width: 1200px;
-  width: 88vw;
+  //max-width: 1200px;
+  width: 100vw;
   padding: 1vw;
   min-height: 100vh;
   background-color: tools.$cMainBg;
@@ -19,6 +19,7 @@ main {
     border-radius: 15px;
     border: 2px solid black;
     padding: 2%;
+    font-size: calc(0.8rem + 0.32vw);
     @include tools.giveShadow(1);
   }
 }
