--- a/styles/sass/_tools.scss
+++ b/styles/sass/_tools.scss
@@ -4,6 +4,7 @@ $cSidebarBg2: hsl(283, 39%, 72%);
 $cLogo: hsl(283, 34%, 40%);
 $cBorderLogo: hsl(284, 38%, 11%);
 $cShadow: hsla(0, 0%, 0%, 50%);
+$cDefaultBorder: black;
 $cLogoText1: #c47d0c;
 $cLogoText2: #eef4a1;
 $cLogoText3: #dfbb45;
