--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -353,7 +353,7 @@ template {
   $cSidebarBg 90%,
   $cMainBg 99%
 ); */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px), (orientation: portrait) {
   html .bodyContainer .sidebarContainer {
     min-width: 0;
     max-width: unset;
@@ -365,6 +365,7 @@ template {
     max-width: unset;
     width: 100vw;
     height: 10vh;
+    max-height: 5rem;
     top: 0;
     bottom: unset;
     left: 0;
@@ -375,22 +376,23 @@ template {
     justify-content: flex-start;
     align-items: center;
     height: 10vh;
+    max-height: 5rem;
   }
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery .logo {
     margin: 0;
-    height: 30px;
-    width: 48px;
+    height: 40px;
+    width: 64px;
     border-radius: 10px;
   }
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery .logo .logoLink {
-    font-size: 0.9rem;
+    font-size: 1.26rem;
   }
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: calc(0.1rem + 1.878vw);
+    padding: 0.4vw;
   }
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul {
     display: flex;
@@ -399,9 +401,12 @@ template {
     align-items: center;
   }
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul li button {
-    width: 6rem;
-    margin: 1vh calc(0.3rem + 0.001vw);
-    font-size: calc(0.9rem + 0.21vw);
+    padding: 0;
+    width: calc(3rem + 11.5vw);
+    padding: 0.5vh 0;
+    text-align: center;
+    margin: 1vh calc(0.01rem + 0.5vw);
+    font-size: calc(0.2rem + 2.2vw);
   }
   html .bodyContainer .sidebarContainer .sidebar footer.mediaQuery .shadow1 {
     position: fixed;
@@ -410,6 +415,8 @@ template {
     border-radius: 0;
     width: 110vw;
     height: 3.8vh;
+    max-height: 3rem;
+    font-size: calc(0.9rem + 1vw);
     box-shadow: 10px -10px 10px hsla(0deg, 0%, 0%, 0.5);
   }
 }
@@ -426,6 +433,10 @@ template {
     justify-content: flex-start;
     align-items: center;
   }
+  html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .logo, html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header nav {
+    display: none;
+    transition: 6s ease width;
+  }
   html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .btn-menu {
     display: flex;
     flex-direction: row;
@@ -437,53 +448,17 @@ template {
     border-radius: 5px;
     border: 1px solid hsl(284deg, 38%, 11%);
   }
+  html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .btn-menu:hover {
+    box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
+    position: relative;
+    bottom: 5px;
+    right: 5px;
+  }
   html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .btn-menu:active {
+    box-shadow: inset 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
     color: #eef4a1;
   }
-  html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header .logo,
-html body div.bodyContainer.mediaQueryMb .sidebarContainer .sidebar header nav {
-    display: none;
-  }
 }
-/* @media only screen and (max-width: 480px) {
-  html body div.bodyContainer.mediaQueryMb {
-    & .sidebarContainer {
-      & .sidebar {
-        //[]
-        height: 3.5rem;
-        min-width: 0;
-        //[]
-        width: 100vw;
-        border: 2px solid black;
-        border-radius: 0 0 20px 0;
-        padding: 2vw;
-        @include tools.flexing(row, none, flex-start, center);
-        & header {
-          & .btn-menu {
-            @include tools.flexing(row, none, center, center);
-            color: tools.$cLogoText3;
-            background-color: tools.$cLogo;
-            font-size: 1.4rem;
-            border-radius: 5px;
-            border: 1px solid tools.$cBorderLogo;
-            &:active {
-              color: tools.$cLogoText2;
-            }
-          }
-          & .logo {
-            //[]
-            display: none;
-          }
-          & nav {
-            //[]
-            //@include tools.flexing(row, wrap, flex-start, center);
-          }
-        }
-      }
-    }
-  }
-}
- */
 * {
   box-sizing: border-box;
 }
@@ -571,8 +546,6 @@ body .bodyContainer {
   background-color: hsl(283deg, 34%, 40%);
   border-radius: 21px;
   border: 2px solid hsl(284deg, 38%, 11%);
-  /* background-image: $gLogoText;
-  background-size: 100%; */
 }
 
 .logoLink {
