--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -6,7 +6,7 @@
   $cMainBg 99%
 ); */
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px), (orientation: portrait) {
   html main {
     width: 100vw;
     padding-top: 8vh;
@@ -14,8 +14,17 @@
   }
   html main div {
     width: 95vw;
+    padding: calc(1rem + 2.5vw);
     margin-bottom: 2rem;
-    font-size: calc(1rem + 0.82vw);
+  }
+  html main div h1 {
+    font-size: calc(1rem + 4vw);
+  }
+  html main div h2 {
+    font-size: calc(1rem + 3vw);
+  }
+  html main div p {
+    font-size: calc(1rem + 2vw);
   }
 }
 main {
