--- a/styles/sass/common.scss
+++ b/styles/sass/common.scss
@@ -22,7 +22,6 @@ html body img.image {
 
 body {
   @include tools.flexing(row, none, flex-start, center);
-  //min-height: 100vh;
 }
 
 .shadow1 {
@@ -72,11 +71,8 @@ body .bodyContainer {
   width: 112px;
   padding: 0 4px;
   background-color: tools.$cLogo;
-  //border-radius: 30px;
   border-radius: 21px;
   border: 2px solid tools.$cBorderLogo;
-  /* background-image: $gLogoText;
-  background-size: 100%; */
 }
 .logoLink {
   font-family: 'Oleo Script Swash Caps', cursive;
@@ -98,7 +94,7 @@ nav {
     list-style: none;
   }
   & li button {
-    border: 2px solid black;
+    border: 2px solid tools.$cDefaultBorder;
     margin: 2vh 1rem;
     padding: 1vh 0;
     width: 7rem;
