--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -1,10 +1,3 @@
-/* $gSideBar: linear-gradient(
-  90deg,
-  $cOutsideBg 0%,
-  $cSidebarBg 15%,
-  $cSidebarBg 90%,
-  $cMainBg 99%
-); */
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -346,13 +339,6 @@ template {
   display: none;
 }
 
-/* $gSideBar: linear-gradient(
-  90deg,
-  $cOutsideBg 0%,
-  $cSidebarBg 15%,
-  $cSidebarBg 90%,
-  $cMainBg 99%
-); */
 @media only screen and (max-width: 768px), (orientation: portrait) {
   html .bodyContainer .sidebarContainer {
     min-width: 0;
@@ -373,7 +359,7 @@ template {
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     height: 10vh;
     max-height: 5rem;
@@ -392,7 +378,7 @@ template {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: 0.4vw;
+    padding: calc(0.2rem + 0.6vw);
   }
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul {
     display: flex;
@@ -402,10 +388,10 @@ template {
   }
   html .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul li button {
     padding: 0;
-    width: calc(3rem + 11.5vw);
+    width: calc(2.4rem + 12vw);
     padding: 0.5vh 0;
     text-align: center;
-    margin: 1vh calc(0.01rem + 0.5vw);
+    margin: 1vh calc(0.01rem + 0.75vw);
     font-size: calc(0.2rem + 2.2vw);
   }
   html .bodyContainer .sidebarContainer .sidebar footer.mediaQuery .shadow1 {
@@ -546,6 +532,19 @@ body .bodyContainer {
   background-color: hsl(283deg, 34%, 40%);
   border-radius: 21px;
   border: 2px solid hsl(284deg, 38%, 11%);
+}
+.logo:hover {
+  transform: scale(1.4);
+  box-shadow: none;
+  border: 1px solid hsl(64deg, 79%, 79%);
+  background-color: hsl(283deg, 34%, 60%);
+  box-shadow: 0px 0px 20px 10px hsla(64deg, 79%, 79%, 0.7), inset 0px 0px 20px 15px hsla(64deg, 79%, 79%, 0.7);
+}
+.logo:active {
+  box-shadow: none;
+  border: 1px solid hsl(45deg, 70%, 57%);
+  background-color: hsl(283deg, 34%, 60%);
+  box-shadow: 0px 0px 20px 10px hsla(45deg, 70%, 57%, 0.7), inset 0px 0px 20px 15px hsla(45deg, 70%, 57%, 0.7);
 }
 
 .logoLink {
